// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should have a table with single package data to install if one package was provided and not installed 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge"
  >
    <span
      class="MuiButton-label"
    >
      Update package listing
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <table>
    <thead>
      <tr>
        <td>
          Name
        </td>
        <td>
          Package Name
        </td>
        <td>
          Description
        </td>
        <td>
          Actions
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          bar
        </td>
        <td>
          barPackage
        </td>
        <td>
          foo
        </td>
        <td>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
          >
            <span
              class="MuiButton-label"
            >
              Install
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Should have a table with single package data to install if one package was provided and uninstalled after clicking the button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge"
  >
    <span
      class="MuiButton-label"
    >
      Update package listing
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <table>
    <thead>
      <tr>
        <td>
          Name
        </td>
        <td>
          Package Name
        </td>
        <td>
          Description
        </td>
        <td>
          Actions
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          bar
        </td>
        <td>
          barPackage
        </td>
        <td>
          foo
        </td>
        <td>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
          >
            <span
              class="MuiButton-label"
            >
              Install
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Should have a table with single package data to update if one package was provided and installed 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge"
  >
    <span
      class="MuiButton-label"
    >
      Update package listing
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <table>
    <thead>
      <tr>
        <td>
          Name
        </td>
        <td>
          Package Name
        </td>
        <td>
          Description
        </td>
        <td>
          Actions
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          bar
        </td>
        <td>
          barPackage
        </td>
        <td>
          foo
        </td>
        <td>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
          >
            <span
              class="MuiButton-label"
            >
              Update
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
          >
            <span
              class="MuiButton-label"
            >
              Uninstall
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Should have a table with single package data to update if one package was provided and installed after clicking the button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge"
  >
    <span
      class="MuiButton-label"
    >
      Update package listing
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <table>
    <thead>
      <tr>
        <td>
          Name
        </td>
        <td>
          Package Name
        </td>
        <td>
          Description
        </td>
        <td>
          Actions
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          bar
        </td>
        <td>
          barPackage
        </td>
        <td>
          foo
        </td>
        <td>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
          >
            <span
              class="MuiButton-label"
            >
              Update
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
          >
            <span
              class="MuiButton-label"
            >
              Uninstall
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Should have an empty table without package data 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge"
  >
    <span
      class="MuiButton-label"
    >
      Update package listing
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <table>
    <thead>
      <tr>
        <td>
          Name
        </td>
        <td>
          Package Name
        </td>
        <td>
          Description
        </td>
        <td>
          Actions
        </td>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;
